# redshift-rebooted

./: CLAUDE.md
.github/workflows/: claude-code-review.yml  status-checks.yml
legacy/: Makefile  README.md  config.h  libtool
legacy/po/: .intltool-merge-cache  Makefile
legacy/src/: Makefile
legacy/src/.deps/: colorramp.Po  config-ini.Po  gamma-dummy.Po  hooks.Po  location-manual.Po  options.Po  pipeutils.Po  redshift.Po  signals.Po  solar.Po  systemtime.Po
legacy/src/redshift-gtk/: Makefile
rewrite/: CLAUDE.md  CONFIG.md  CONTINUAL_MODE_DEMO.md  Cargo.toml  INI_CONFIG_IMPLEMENTATION.md  README.md  SIGNAL_HANDLING_TESTS.md  lcov.info  redshift.conf.sample
rewrite/data/: filtered_world_cities.json
rewrite/scripts/: install.sh  process_cities.py  uninstall.sh
rewrite/src/: cities.rs  colorramp.rs  config.rs  config_ini.rs  gamma.rs  gamma_guard.rs  gamma_randr.rs  interactive.rs  lib.rs  location.rs  main.rs  signals.rs  solar.rs  types.rs
rewrite/systemd/: redshift-rebooted.service
rewrite/tests/: cities_tests.rs  colorramp_tests.rs  config_ini_tests.rs  config_merging_tests.rs  config_tests.rs  continual_mode_tests.rs  gamma_coverage_tests.rs  gamma_guard_tests.rs  gamma_randr_tests.rs  gamma_tests.rs  location_geoclue2_tests.rs  location_tests.rs  logging_tests.rs  main_tests.rs  signal_tests.rs  signals_module_tests.rs  solar_coverage_tests.rs  solar_tests.rs  types_tests.rs
