[package]
name = "redshift-rebooted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
x11rb = { version = "0.13", features = ["randr"] }
zbus = { version = "4.0", default-features = false, features = ["tokio"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "macros"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
